overflow fix
fixed overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,6 @@
+ html {
+    overflow-y:scroll;
+}
  header
       {
         padding-left: 20px;
